mambaGrammar
'''
    statement_list : statement
                   | statement_list statement

	statement : identifier
              | expression
              | if_statement

	identifier : IDENTIFIER

	statement : EXIT STMT_END

	primitive : NUM_INT
              | NUM_FLOAT
              | STRING
              | boolean
	
	expression : expression PLUS expression %prec PLUS
            | expression MINUS expression %prec MINUS
            | expression MUL expression %prec MUL
            | expression DIV expression %prec DIV
            | expression EXP expression %prec EXP
            | expression MOD expression %prec MOD

            | expression BIT_AND expression
            | expression BIT_OR expression
            | expression BIT_XOR expression
            | expression LSHIFT expression
            | expression RSHIFT expression

	boolean : expression EQ expression
            | expression NEQ expression
            | expression GT expression
            | expression GTE expression
            | expression LT expression
            | expression LTE expression
            | expression AND expression
            | expression OR expression

	expression : MINUS expression %prec UMINUS
               | PLUS expression %prec UPLUS
               | BIT_NEG expression
               | NOT expression

	expression : LPAREN expression RPAREN

	boolean : TRUE
            | FALSE

	assignable : primitive
               | expression

	arguments : arguments COMMA expression
              | expression
              |

	expression : expression QUESTION_MARK expression COLON expression

	expression : LSQBRACK arguments RSQBRACK

	expression : identifier LSQBRACK expression RSQBRACK

	expression : identifier LSQBRACK expression COLON expression RSQBRACK
               | identifier LSQBRACK COLON expression RSQBRACK
               | identifier LSQBRACK expression COLON RSQBRACK
               | identifier LSQBRACK COLON RSQBRACK

	expression : identifier EQUALS assignable STMT_END

	if_statement : IF expression LBRACK statement_list RBRACK

	if_statement : IF expression LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK

	if_statement : IF expression LBRACK statement_list RBRACK ELSE if_statement

	expression : expression IN expression
               | expression NOT IN expression

	statement : PRINT arguments STMT_END

	statement : identifier PLUS_EQ expression STMT_END
               | identifier MINUS_EQ expression STMT_END
               | identifier MUL_EQ expression STMT_END
               | identifier DIV_EQ expression STMT_END
               | identifier EXP_EQ expression STMT_END
               | identifier MOD_EQ expression STMT_END

	expression : identifier DOUBLE_PLUS
               | identifier DOUBLE_MINUS

	expression : primitive
               | STRING
               | identifier

	statement : FOR identifier IN expression ARROW_LTR expression LBRACK statement_list RBRACK
              | FOR identifier IN expression ARROW_RTL expression LBRACK statement_list RBRACK

	statement : FOR identifier IN expression LBRACK statement_list RBRACK

	statement : WHILE expression LBRACK statement_list RBRACK

	statement : FOR LBRACK statement_list RBRACK

	statement : FUNCTION identifier LPAREN arguments RPAREN LBRACK statement_list RBRACK
              | FUNCTION identifier LBRACK statement_list RBRACK

	statement : RETURN expression STMT_END

	expression : identifier LPAREN arguments RPAREN
    statement : identifier LPAREN arguments RPAREN STMT_END
'''
